# astronomyNotifier

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: production.yml
AstronomyNotifierUI/: AstronomyNotifierUI.csproj  AstronomyNotifierUI.sln  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs
AstronomyNotifierUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
src/: app.py  main.py
src/apis/: asteroids.py  aurora.py  eclipse.py  iss.py  location.py  moon.py  weather.py  weatherQueries.py
tests/: test_app.py  test_asteroids.py  test_aurora.py  test_eclipse.py  test_iss.py  test_location.py  test_moon.py  test_weather.py
user_interface/AstronomyNotifierUI/: AstronomyNotifierUI.csproj  AstronomyNotifierUI.sln  Form1.cs  Program.cs
user_interface/AstronomyNotifierUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
