[tool.poetry]
name = "astronomynotifier"
version = "0.1.0"
description = "Poetry for our group project"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
