[tool.poetry]
name = "astronomynotifier"
version = "0.1.0"
description = "Poetry for our group project"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"

packages = [
    { include = "src", from = "."},
]

[tool.poetry.dependencies]
python = "^3.11"
python-weather = "^2.0.7"
pip = "^24.3.1"
app = "^0.0.1"
geocoder = "^1.38.1"
pytest = "^8.3.3"
quart = "^0.19.8"
pytest-asyncio = "^0.24.0"
requests = "^2.32.3"
astronomy-engine = "^2.1.19"
httpx = "^0.27.2"
ephem = "^4.1.6"
skyfield = "^1.49"
geopy = "^2.4.1"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
nasapi = "^0.0.5"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["src"]
